force-app/main/default/objects/OTP_Verification__c/OTP_Verification__c.object-meta.xml
<CustomObject>
    <label>OTP Verification</label>
    <nameField>
        <displayFormat>OTP - {0000}</displayFormat>
        <label>OTP Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTP Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>