force-app/main/default/objects/OTP_Verification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OTP Verifications</relationshipLabel>
    <relationshipName>OTP_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>