force-app/main/default/objects/OTP_Verification__c/fields/Attempts_Sent__c.field-meta.xml
<CustomField>
    <fullName>Attempts_Sent__c</fullName>
    <description>Created to Identify how many times the OTP Has been sent to the customer.</description>
    <inlineHelpText>Max 5</inlineHelpText>
    <label>Attempts Sent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>