force-app/main/default/objects/OTP_Verification__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <description>Created To identify when the OTP send record has been created</description>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>