force-app/main/default/objects/OTP_Verification__c/fields/Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Verified__c</fullName>
    <description>Created to log the OTP Successfully verified Date and Time</description>
    <label>Date Verified</label>
    <type>DateTime</type>
</CustomField>