force-app/main/default/objects/OTP_Verification__c/fields/Service_Sid__c.field-meta.xml
<CustomField>
    <fullName>Service_Sid__c</fullName>
    <description>A Verification Service is the set of common configurations used to create and check verifications.</description>
    <label>Service Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>