force-app/main/default/objects/OTP_Verification__c/fields/Sid_Verification_ID__c.field-meta.xml
<CustomField>
    <fullName>Sid_Verification_ID__c</fullName>
    <description>Created to store the unique Id generated by Twilio for OTP Verification</description>
    <label>Sid (Verification ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>