force-app/main/default/objects/OTP_Verification__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>Created to identify to which number the OTP has been sent</description>
    <label>To</label>
    <type>Phone</type>
</CustomField>