force-app/main/default/objects/OTP_Verification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>To__c</columns>
    <columns>Status__c</columns>
    <columns>Sid_Verification_ID__c</columns>
    <columns>Date_Created__c</columns>
    <columns>Date_Verified__c</columns>
    <columns>Date_Expires__c</columns>
    <columns>Attempts_Sent__c</columns>
    <columns>Attempts_Checked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>